--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
     <name>server-test-webapp</name>
     <description>server-test-webapp</description>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
-        <project.en></project.en>
+        <java.target.version>1.8</java.target.version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,6 +34,11 @@
             <groupId>cn.netbuffer</groupId>
             <artifactId>print-server-address</artifactId>
             <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
         </dependency>
     </dependencies>
 
