--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,11 @@ management:
     web:
       exposure:
         include: "*"
+  info:
+    java:
+      enabled: true
+    env:
+      enabled: true
 
 info:
   app:
